--- a/src/app/git-search/git-search.component.html
+++ b/src/app/git-search/git-search.component.html
@@ -1,5 +1,6 @@
+<h3>{{title}} - {{displayQuery}}</h3>
 <input name="query" placeholder="Enter Search Here" [(ngModel)]="searchQuery" />
-<button (click)="gitSearch()">Submit</button>
+<button (click)="sendQuery()">Submit</button>
 <div *ngIf="searchResults; else loadingBlock">
   <div *ngIf="searchResults.total_count; else noResultsBlock">
     <ng-container *ngTemplateOutlet="resultsBlock"></ng-container>
