--- a/src/app/git-search/git-search.component.html
+++ b/src/app/git-search/git-search.component.html
@@ -1,5 +1,5 @@
 <h3>{{title}} - {{displayQuery}}</h3>
-<input name="query" placeholder="Enter Search Here" [(ngModel)]="searchQuery" />
+<input name="query" placeholder="Enter Search Here" [(ngModel)]="searchQuery" (keyup.enter)="sendQuery()" />
 <button (click)="sendQuery()">Submit</button>
 <div *ngIf="searchResults; else loadingBlock">
   <div *ngIf="searchResults.total_count; else noResultsBlock">
