--- a/src/app/git-search/git-search.component.html
+++ b/src/app/git-search/git-search.component.html
@@ -1,6 +1,10 @@
 <h3>{{title}} - {{displayQuery}}</h3>
-<input name="query" placeholder="Enter Search Here" [(ngModel)]="searchQuery" (keyup.enter)="sendQuery()" />
-<button (click)="sendQuery()">Submit</button>
+<form  (ngSubmit)="sendQuery()">
+  <div *ngFor="let key of modelKeys">
+    {{key}} <input name="{{key}}" placeholder="Enter {{key}} here" [(ngModel)]="model[key]" />
+  </div>
+  <button type="submit">Submit</button>
+</form>
 <div *ngIf="searchResults; else loadingBlock">
   <div *ngIf="searchResults.total_count; else noResultsBlock">
     <ng-container *ngTemplateOutlet="resultsBlock"></ng-container>
