Create a Reactive Form

--- a/src/app/git-search/git-search.component.html
+++ b/src/app/git-search/git-search.component.html
@@ -1,7 +1,7 @@
 <h3>{{title}} - {{displayQuery}}</h3>
-<form  (ngSubmit)="sendQuery()">
+<form  (ngSubmit)="sendQuery()" [formGroup]="form">
   <div *ngFor="let key of modelKeys">
-    {{key}} <input name="{{key}}" placeholder="Enter {{key}} here" [(ngModel)]="model[key]" />
+    {{key}} <input placeholder="Enter {{key}} here" formControlName="{{key}}" />
   </div>
   <button type="submit">Submit</button>
 </form>
