--- a/src/app/git-search/git-search.component.html
+++ b/src/app/git-search/git-search.component.html
@@ -14,8 +14,18 @@
 
 <ng-template #resultsBlock>
     <ul class="list">
-      <app-repository-display [searchResults]="searchResults.repositories" *ngIf="searchResults.repositories"></app-repository-display>
-      <app-code-display [searchResults]="searchResults.code" *ngIf="searchResults.code"></app-code-display>
+      <app-repository-display
+      [searchResults]="searchResults.repositories"
+      [favorites]="favorites"
+      (updateFavorites)="handleFavorite($event)"
+      *ngIf="searchResults.repositories">
+      </app-repository-display>
+      <app-code-display
+      [searchResults]="searchResults.code"
+      [favorites]="favorites"
+      (updateFavorites)="handleFavorite($event)"
+      *ngIf="searchResults.code">
+      </app-code-display>
     </ul>
 </ng-template>
 
