--- a/src/app/code-display/code-display.component.html
+++ b/src/app/code-display/code-display.component.html
@@ -8,6 +8,8 @@ class="list_item"
       <small> by {{result.repository.owner.login | uppercase}}</small>
     </h4>
   </a>
+  <span class="favorite_icon" *ngIf="!checkFavorite(result)" (click)="toggleFavorite(result)">&#9734;</span>
+  <span class='favorite_icon favorited' *ngIf="checkFavorite(result)" (click)="toggleFavorite(result)">&#9733;</span>
   <p class="description">{{result.repository.description}}</p>
   <p> Path: {{result.path}} </p>
 </li>
