Create custom directive

--- a/src/app/code-display/code-display.component.html
+++ b/src/app/code-display/code-display.component.html
@@ -1,6 +1,7 @@
 <li
 [ngClass]="{'even': (i % 2 === 0), 'odd': (i % 2 !== 0)}"
 class="list_item"
+appFade
 *ngFor="let result of searchResults.items; index as i">
   <a [href]="result.html_url">
     <img class="avatar" [src]="result.repository.owner.avatar_url" />
