--- a/src/app/repository-display/repository-display.component.html
+++ b/src/app/repository-display/repository-display.component.html
@@ -5,7 +5,7 @@ appFade
 *ngFor="let result of searchResults.items; index as i">
   <a [href]="result.html_url">
     <img class="avatar" [src]="result.owner.avatar_url" />
-    <h4 class="title">{{result.name}}
+    <h4 class="title">{{result.name | favoriteText:checkFavorite(result)}}
       <small> by {{result.owner.login | uppercase}}</small>
     </h4>
   </a>
